--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
   <header>
-    <h1>Ashfaque Hossain</h1>
+    <h1>Ashfaque Hossain Ayon</h1>
     <img src="profile.jpg" alt="My Photo" class="profile">
   </header>
 
