--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
         <li>Reading science fiction</li>
         <li>Football</li>
         <li>Photography</li>
-        <li>Watching movies/TV Shows</li>
+        <li>Watching movies/TV Shows</li>  
+        <li>Playing guitar</li>
       </ul>
     </section>
 
