--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
         <li>Football</li>
         <li>Photography</li>
         <li>Watching movies/TV Shows</li>  
-        <li>Playing guitar</li>
+        <li>Playing guitar</li>  
+        <li>Playing</li>
       </ul>
     </section>
 
